--- a/1st_mnist.ipynb
+++ b/1st_mnist.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "#kerasの必要なコンポーネントをインポート\n",
     "from tensorflow.keras.models import Sequential\n",
@@ -17,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,31 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/tmk0204/opt/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n",
-      "/Users/tmk0204/opt/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n",
-      "/Users/tmk0204/opt/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n",
-      "/Users/tmk0204/opt/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.datasets import fetch_mldata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1044,7 @@
        "27    0    0    0    0    0    0   0   0   0   0   0  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1108,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1129,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1131,7 @@
        "array([0., 0., 1., 0., 0., 0., 0., 0., 0., 0.], dtype=float32)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1163,36 +1156,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 先に作成したmodelへレイヤーを追加\n",
-    "model.add(Conv2D(32, kernel_size=(3, 3),\n",
-    "                 activation='relu',\n",
-    "                 input_shape=(28,28,1)))\n",
-    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    "model.add(Dropout(0.25))\n",
-    "model.add(Flatten())\n",
-    "model.add(Dense(128, activation='relu'))\n",
-    "model.add(Dense(10, activation='softmax'))"
+    "model.add(Conv2D(32, kernel_size=(3, 3),#二次元畳み込み層．空間フィルター畳み込み演算層\n",
+    "                 activation='relu',     #活性化関数の定義\n",
+    "                 input_shape=(28,28,1)))#白黒画像を入力\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))#最大プーリング層を定義\n",
+    "model.add(Conv2D(128, kernel_size=(3,3), \n",
+    "                 activation=\"relu\"))#\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))#最大プーリング層を定義\n",
+    "model.add(Dropout(0.25))#Dropoutの割合定義（過学習の予防）\n",
+    "model.add(Flatten())#平坦化（次元削減）1次元ベクトルに変換する\n",
+    "model.add(Dense(128, activation='relu'))#全結合層．出力128を定義\n",
+    "model.add(Dense(10, activation='softmax'))#出力が確率になるように変換"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Learnig Processの設定\n",
-    "model.compile(loss='categorical_crossentropy',\n",
-    "optimizer='sgd',\n",
+    "model.compile(loss='categorical_crossentropy',#ラベル付けの損失関数\n",
+    "optimizer='sgd',#確率的勾配降下法\n",
     "metrics=['accuracy'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1200,34 +1196,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "1875/1875 [==============================] - 23s 12ms/step - loss: 0.5451 - accuracy: 0.8430\n",
+      "1875/1875 [==============================] - 71s 38ms/step - loss: 0.5134 - accuracy: 0.8475\n",
       "Epoch 2/10\n",
-      "1875/1875 [==============================] - 42s 23ms/step - loss: 0.2525 - accuracy: 0.9240\n",
+      "1875/1875 [==============================] - 115s 61ms/step - loss: 0.1442 - accuracy: 0.9559\n",
       "Epoch 3/10\n",
-      "1875/1875 [==============================] - 48s 26ms/step - loss: 0.1920 - accuracy: 0.9427\n",
+      "1875/1875 [==============================] - 107s 57ms/step - loss: 0.1047 - accuracy: 0.9679\n",
       "Epoch 4/10\n",
-      "1875/1875 [==============================] - 41s 22ms/step - loss: 0.1556 - accuracy: 0.9543\n",
+      "1875/1875 [==============================] - 114s 61ms/step - loss: 0.0880 - accuracy: 0.9729\n",
       "Epoch 5/10\n",
-      "1875/1875 [==============================] - 40s 21ms/step - loss: 0.1318 - accuracy: 0.9607\n",
+      "1875/1875 [==============================] - 92s 49ms/step - loss: 0.0751 - accuracy: 0.9764\n",
       "Epoch 6/10\n",
-      "1875/1875 [==============================] - 38s 21ms/step - loss: 0.1139 - accuracy: 0.9661\n",
+      "1875/1875 [==============================] - 86s 46ms/step - loss: 0.0667 - accuracy: 0.9797\n",
       "Epoch 7/10\n",
-      "1875/1875 [==============================] - 38s 20ms/step - loss: 0.0989 - accuracy: 0.9704\n",
+      "1875/1875 [==============================] - 81s 43ms/step - loss: 0.0599 - accuracy: 0.9814\n",
       "Epoch 8/10\n",
-      "1875/1875 [==============================] - 37s 20ms/step - loss: 0.0898 - accuracy: 0.9727\n",
+      "1875/1875 [==============================] - 79s 42ms/step - loss: 0.0548 - accuracy: 0.9832\n",
       "Epoch 9/10\n",
-      "1875/1875 [==============================] - 36s 19ms/step - loss: 0.0814 - accuracy: 0.9751\n",
+      "1875/1875 [==============================] - 80s 42ms/step - loss: 0.0520 - accuracy: 0.9838\n",
       "Epoch 10/10\n",
-      "1875/1875 [==============================] - 37s 20ms/step - loss: 0.0749 - accuracy: 0.9769\n"
+      "1875/1875 [==============================] - 87s 46ms/step - loss: 0.0472 - accuracy: 0.9855\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f7e941b7b50>"
+       "<tensorflow.python.keras.callbacks.History at 0x7fbaa99e7250>"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,15 +1236,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "79/79 [==============================] - 1s 9ms/step - loss: 0.0630 - accuracy: 0.9799\n",
-      "[0.0629996731877327, 0.9799000024795532]\n"
+      "79/79 [==============================] - 3s 34ms/step - loss: 0.0356 - accuracy: 0.9883\n",
+      "[0.03562743216753006, 0.9883000254631042]\n"
      ]
     }
    ],
